update supported versions
git-svn-id: http://svn.sogou-inc.com/svn/operation/code/trunk/nginx/sogou-modules/ngx_req_status@31850 37f11c65-4054-0410-8c88-bae154d70917

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-* 模块使用需要打 patch, 目前对 1.0.2~1.0.4 有效
+* 模块使用需要打 patch, 目前测试对 1.0.2 及以上版本有效
   cd nginx-1.0.x; patch -p1 < path/write_filter.patch
 
 * 配置说明
